--- a/.htaccess
+++ b/.htaccess
@@ -1,40 +1,41 @@
-RewriteEngine On
+# Redirection non-www vers www:
+RewriteCond %{HTTP_HOST} !^www\. [NC]
+RewriteRule ^(.*)$ http://%{HTTP_HOST}/$1 [R=301,L]
+ 
+# Redirection de http vers https:
+RewriteCond %{HTTPS} off
+RewriteRule (.*) https://%{HTTP_HOST}/$1 [R=301,L]
 
+RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^(.+)$ index.php
-#RewriteRule ^(accueil)$ views/front/accueil.views.php
-#RewriteRule ^(login)$ login.views.php
-#RewriteRule ^(signup)$ views/front/signup.views.php
-#RewriteRule ^(projet2022)$ views/front/projet2022.views.php
-#RewriteRule ^(eleves)$ views/front/eleves.views.php
-#RewriteRule ^(membres)$ views/front/membres.views.php
-#RewriteRule ^(deconnexion)$ views/front/deconnexion.views.php
 
+RewriteBase /
 
-ErrorDocument 301 ACB92/index.php/?page=error301
-ErrorDocument 302 ACB92/index.php/?page=error302
-ErrorDocument 400 ACB92/index.php/?page=error400
-ErrorDocument 401 ACB92/index.php/?page=error401
-ErrorDocument 402 ACB92/index.php/?page=error402
-ErrorDocument 403 ACB92/index.php/?page=error403
-ErrorDocument 404 ACB92/index.php/?page=error404
-ErrorDocument 405 ACB92/index.php/?page=error405
-ErrorDocument 500 ACB92/index.php/?page=error500
-ErrorDocument 505 ACB92/index.php/?page=error505
+RewriteRule ^(.*)$ index.php?page=$1
+
+ErrorDocument 302 https://www.acb92.com/index.php/?page=error302
+ErrorDocument 400 https://www.acb92.com/index.php/?page=error400
+ErrorDocument 401 https://www.acb92.com/index.php/?page=error401
+ErrorDocument 402 https://www.acb92.com/index.php/?page=error402
+ErrorDocument 403 https://www.acb92.com/index.php/?page=error403
+ErrorDocument 404 https://www.acb92.com/index.php/?page=error404
+ErrorDocument 405 https://www.acb92.com/index.php/?page=error405
+ErrorDocument 500 https://www.acb92.com/index.php/?page=error500
+ErrorDocument 505 https://www.acb92.com/index.php/?page=error505
 
 
 Options All -Indexes
 ServerSignature Off
-Options +FollowSymLinks
+Options +FollowSymLinks -MultiViews
 AddDefaultCharset UTF-8
 
 #Protection XSS, clickJacking et Mime-Type
 <ifModule mod_headers.c>
 Header set X-XSS-Protection "1; mode=block"
 Header always append X-Frame-Options SAMEORIGIN
-Header set X-Content-Type-Options: "nosniff”
+Header set X-Content-Type-Options: "nosniff"
 </ifModule>
 
 # protection contre les injections de fichiers
